@@ -22,6 +22,7 @@
  */
 package com.mysql.jdbc;
 
+import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -148,6 +149,25 @@ public class LoadBalancingConnectionProxy implements InvocationHandler,
 	private MySQLConnection thisAsConnection = null;
 
 	private int autoCommitSwapThreshold = 0;
+	
+	private static Constructor JDBC_4_LB_CONNECTION_CTOR;
+	
+	static {
+		if(Util.isJdbc4()){
+			try {
+				JDBC_4_LB_CONNECTION_CTOR =  Class.forName(
+						"com.mysql.jdbc.JDBC4LoadBalancedMySQLConnection").getConstructor(
+						new Class[] { LoadBalancingConnectionProxy.class});
+			} catch (SecurityException e) {
+				throw new RuntimeException(e);
+			} catch (NoSuchMethodException e) {
+				throw new RuntimeException(e);
+			} catch (ClassNotFoundException e) {
+				throw new RuntimeException(e);
+			}
+		}
+	}
+	
 	
 	
 
@@ -299,11 +319,13 @@ public class LoadBalancingConnectionProxy implements InvocationHandler,
 				lbExceptionChecker, "InvalidLoadBalanceExceptionChecker", null).get(0);
 		this.exceptionChecker.init(null, props);
 
-
-		thisAsConnection = new LoadBalancedMySQLConnection(this);
-
+		if(Util.isJdbc4()  || JDBC_4_LB_CONNECTION_CTOR != null){
+			thisAsConnection =  (MySQLConnection) Util.handleNewInstance(JDBC_4_LB_CONNECTION_CTOR,
+					new Object[] {this}, null);
+		}else{
+			thisAsConnection = new LoadBalancedMySQLConnection(this);
+		}
 		pickNewConnection();
-		
 		
 		
 	}
