@@ -26,6 +26,9 @@ mm-dd-10 - Version 5.1.14
        
        Any other parameters are treated as host-specific properties that follow the conventions of the JDBC URL properties. This now allows per-host overrides of any configuration property for multi-host connections (failover, loadbalance, replication). We do recommend that the overrides are limited to user, password, network timeouts and statement and metadata cache sizes. Unexpected behavior may be observed with other per-host overrides.
 
+    - Fix for Bug#56099 - Added support for JDBC4-specific functionality when using load-balanced connections.
+
+
 06-24-10 - Version 5.1.13
 
    - Minor fix in previous patch for Bug#51904. Function ConnectionImpl.setCatalog() was passed quoted argument thus breaking with "...for the right syntax to use near 'test``'"
